<?xml version="1.0"?>
<package format="3">
  <name>grid_fast</name>
  <version>0.0.0</version>
  <description>The grid_fast package</description>
  <maintainer email="scofre@ltu.se">Scott Fredriksson</maintainer>
  <license>GPLv3</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>grid_fast_msgs</depend>
  <depend>grid_fast_srvs</depend>

  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

